# chat_desktop

./: .env  .env.example  .gitignore  AGENTS.md  CHANGE_EMP_NO.md  CLAUDE.md  COCOAPODS_FIX.md  ChatDesktop.Wpf.sln  ChatDesktop.Wpf.slnx  Dify.md  EMQX_CONFIG.md  MIGRATION_PLAN.md  MQTT_CONNECTION_ISSUE.md  MQTT_ENV_CONFIG.md  MQTT_TEST_GUIDE.md  Mqtt.md  README.md  analysis_options.yaml  build_windows.bat  dynamic_logo.json  installer.iss  notification.md  pubspec.yaml  todo.md  unread_logo.json  windows.md
.github/workflows/: build-windows.yml
.specify/memory/: constitution.md
assets/fonts/: README.md
docs/: AGENT_API_README.md  AI_SERVICE_CHANGES.md  ARCHITECTURE.md  BUILD_ON_MACOS.md  CONVERSATION_ID_USAGE.md  DIFY_INTEGRATION.md  GETTING_STARTED.md  GITHUB_ACTIONS.md  QUICK_BUILD.md  RELEASE_WINDOWS.md  SETUP_MACOS.md  SETUP_WINDOWS.md  WINDOWS_BUILD.md
lib/: app.dart  main.dart  mini_window_entry.dart
lib/models/: ai_agent.dart  ai_agent.g.dart  conversation.dart  conversation.g.dart  dispatch_candidate.dart  message.dart  message.g.dart  task.dart  task.g.dart  task_action.dart  task_action.g.dart  task_page_result.dart
lib/providers/: agent_provider.dart  ai_assistant_provider.dart  chat_provider.dart  font_provider.dart  task_provider.dart  window_provider.dart
lib/screens/: home_screen.dart
macos/: Gemfile
test/: widget_test.dart
windows/: CMakeLists.txt  README.md
windows/native_floating_ball/: CMakeLists.txt
windows/native_floating_ball/src/: app.cpp  ball_wnd.cpp  ball_wnd.h  bubble_wnd.cpp  bubble_wnd.h  gif_player.cpp  gif_player.h
(+184 files in other folders)
